--- a/hw3.html
+++ b/hw3.html
@@ -3,5 +3,22 @@
         <div style="text-align:center; font-size:larges">
             James Jantz
         </div>
+        <colgroup>
+            <col span="2">
+            <col span="2">
+            <col span="2">
+            <col span="2">
+            <col span="2">
+            <col span="2">
+            <col span="2">
+        </colgroup>
+        <tr>
+            <th>home</th>
+            <th>nature</th>
+            <th>urban</th>
+            <th>videos</th>
+            <th>bio</th>
+            <th>photo albums</th>
+            <th>book online</th>
+        </tr>
     </div>
-</html>
