--- a/hw3.html
+++ b/hw3.html
@@ -21,14 +21,14 @@
             <th>photo albums</th>
             <th>book online</th>
         </tr>
-        <canvas id="testCanvas" width="290" height="160" style="border:1px solid #d3d3d3;">
+        <canvas id="testCanvas" width="600" height="160" style="border:3px solid #d3d3d3;">
         </canvas>
     </div>
 </html>
 <script>
-    var c=document.getElementById("testCanvas");
-    var ctx=c.getContext("2d");
-    ctx.strokeRect(30,40,140,110);
+    //var c=document.getElementById("testCanvas");
+    //var ctx=c.getContext("2d");
+    //ctx.strokeRect(30,40,140,110);
 </script>
 <style>
 .hyperlink{
