--- a/hw3.html
+++ b/hw3.html
@@ -1,6 +1,6 @@
 <html>
     <div>
-        <div style="text-align:center; font-size:larges">
+        <div style="text-align:center; font-size:25">
             James Jantz
         </div>
         <colgroup>
@@ -21,8 +21,10 @@
             <th>photo albums</th>
             <th>book online</th>
         </tr>
-        <canvas id="testCanvas" width="600" height="160" style="border:3px solid #d3d3d3;">
-        </canvas>
+        <div style="text-align:center">
+            <canvas id="testCanvas" width="600" height="160" style="border:3px solid #d3d3d3;"> 
+            </canvas>
+        </div>
     </div>
 </html>
 <script>
