--- a/hw3.html
+++ b/hw3.html
@@ -1,6 +1,6 @@
 <html>
     <div>
-        <div style ="position: absolute; z-index: 9999;">
+        <div style ="position: absolute; z-index: 9999; left: 0; right: 0">
             <div style="text-align:center; font-size: 45px;">
                 James Jantz
             </div>
@@ -27,7 +27,7 @@
             
         </div>
         
-        <div style="text-align:center; position:absolute; z-index: -1;">
+        <div style="text-align:center; position:absolute; z-index: -1; left: 0; right: 0">
             <canvas id="testCanvas" width="600" height="160" style="text-align:center;border:3px solid #d3d3d3;">
             </canvas>
         </div>
