--- a/ind27ex3879.html
+++ b/ind27ex3879.html
@@ -16,7 +16,7 @@ th, td {
 
 <table style="width:60%" align = "center">
   <tr>
-    <td><a href= "">Link to Homework #1</a></td>
+    <td><a href= "https://jiananti.github.io">Link to Homework #1</a></td>
     <td><a href= "">Link to Homework #2</a></td>
   </tr>
   <tr>
