--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -32,7 +32,7 @@
         </div>
         
     </div>
-    <div>
+    <div style="position: absolute">
         <colgroup>
             <col span="10">
             <col span="10">
