--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -4,7 +4,7 @@
         //var c=document.getElementById("testCanvas");
         //var ctx=c.getContext("2d");
         //ctx.strokeRect(30,40,140,110);
-            var imgHome = ['./images/road.jpg','./images/road.jpg','./images/lake.jpg','./images/mountain.jpg']
+            var imgHome = ['./images/pier.jpg','./images/road.jpg','./images/lake.jpg','./images/mountain.jpg']
         </script>
     </head>
     <body>
@@ -48,13 +48,13 @@
 
             </colgroup>
             <tr>
-                <th><img src="imgHome[0]"></th>
-                <th><img src="imgHome[1]"></th>
+                <th><img src="./images/pier.jpg"></th>
+                <th><img src="./images/road.jpg]"></th>
 
             </tr>
             <tr>
-                <th><img src="imgHome[2]"></th>
-                <th><img src="imgHome[3]"></th>
+                <th><img src="./images/lake.jpg"></th>
+                <th><img src="./images/mountain.jpg"></th>
             </tr>
         </div>
     </body>
