--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -48,13 +48,13 @@
 
             </colgroup>
             <tr>
-                <th><img src="./images/pier.jpg"></th>
-                <th><img src="./images/road.jpg]"></th>
+                <th><img src="./images/pier.jpg" alt=""></th>
+                <th><img src="./images/road.jpg]" alt=""></th>
 
             </tr>
             <tr>
-                <th><img src="./images/lake.jpg"></th>
-                <th><img src="./images/mountain.jpg"></th>
+                <th><img src="./images/lake.jpg" alt=""></th>
+                <th><img src="./images/mountain.jpg" alt=""></th>
             </tr>
         </div>
     </body>
