--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -41,7 +41,7 @@
             </div>
 
         </div>
-        <div style="position: absolute">
+        <div style="width:900px; height:600px; position: absolute">
             <colgroup>
                 <col span="2">
                 <col span="2">
