--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -48,7 +48,7 @@
 
             </colgroup>
             <tr>
-                <th><img src="./images/pier.jpg" alt=""></th>
+                <th><img src="./images/pier.jpg" alt="" width:"800px" length:"600px"></th>
                 <th><img src="./images/road.jpg]" alt=""></th>
 
             </tr>
