--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with Github Pages.</p>
-<img src="./mountain.jpg" alt="">
+<img src="./mountain.jpg" alt="" width="500px" length="800px">
 </body>
 </html>
