--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -48,13 +48,13 @@
 
             </colgroup>
             <tr>
-                <th><img src="./images/pier.jpg" alt="" width="600px" length="400px"></th>
-                <th><img src="./images/road.jpg]" alt="" width="600px" length="400px"></th>
+                <th><img src="./images/pier.jpg" alt="" width="370px" length="370px"></th>
+                <th><img src="./images/road.jpg" alt="" width="370px" length="370px"></th>
 
             </tr>
             <tr>
-                <th><img src="./images/lake.jpg" alt="" width="600px" length="400px"></th>
-                <th><img src="./images/mountain.jpg" alt="" width="600px" length="400px"></th>
+                <th><img src="./images/lake.jpg" alt="" width="370px" length="370px"></th>
+                <th><img src="./images/mountain.jpg" alt="" width="370px" length="370px"></th>
             </tr>
         </div>
     </body>
