--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -41,10 +41,10 @@
             </div>
 
         </div>
-        <div style="width:900px; height:600px; position: absolute">
+        <div style="position: absolute">
             <colgroup>
-                <col span="2">
-                <col span="2">
+                <col span="10">
+                <col span="10">
 
             </colgroup>
             <tr>
