--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -40,13 +40,13 @@
 
             </colgroup>
             <tr>
-                <td><img src="./images/pier.jpg" alt="" width="370px" length="370px"></td>
-                <td><img src="./images/road.jpg" alt="" width="370px" length="370px"></td>
+                <td><img src="./images/pier.jpg" alt="" width="370px" height="370px"></td>
+                <td><img src="./images/road.jpg" alt="" width="370px" height="370px"></td>
 
             </tr>
             <tr>
-                <td><img src="./images/lake.jpg" alt="" width="370px" length="370px"></td>
-                <td><img src="./images/mountain.jpg" alt="" width="370px" length="370px"></td>
+                <td><img src="./images/lake.jpg" alt="" width="370px" height="370px"></td>
+                <td><img src="./images/mountain.jpg" alt="" width="370px" height="370px"></td>
             </tr>
         </div>
     </body>
