--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -10,25 +10,26 @@
     <body>
         <div>
             <div style ="position: absolute; z-index: 9999; left: 0; right: 0">
-                <div style="text-align:center; font-size: 45px; margin-top: 50px;">
+                <div style="text-align:center; font-size: 45px; margin-top: 20px;">
                     James Jantz
                 </div>
                 <div style="text-align:center">
-                        
-                        <tr>
-                            <th style="margin-left:30px">home</th>
-                            <th style="margin-left:30px">nature</th>
-                            <th style="margin-left:30px">urban</th>
-                            <th style="margin-left:30px">videos</th>
-                            <th style="margin-left:30px">bio</th>
-                            <th style="margin-left:30px">photo albums</th>
-                            <th style="margin-left:30px">book online</th>
-                        </tr>
+                        <table style="border-spacing: 20px">
+                            <tr>
+                                <th>home</th>
+                                <th>nature</th>
+                                <th>urban</th>
+                                <th>videos</th>
+                                <th>bio</th>
+                                <th>photo albums</th>
+                                <th>book online</th>
+                            </tr>
+                        </table
                 </div>            
             </div>
 
             <div style="text-align:center; position:absolute; z-index: -1; left: 0; right: 0">
-                <canvas id="testCanvas" width="800" height="120" style="text-align:center;border:3px solid #d3d3d3;">
+                <canvas id="testCanvas" width="840" height="90" style="text-align:center;border:2px solid #d3d3d3;">
                 </canvas>
             </div>
 
