--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -14,7 +14,7 @@
                     James Jantz
                 </div>
                 <div style="text-align:center">
-                    <table style="border-spacing: 20px text-align:center">
+                    <table style="border-spacing: 20px; text-align:center">
                             <tr>
                                 <th>home</th>
                                 <th>nature</th>
