--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -10,10 +10,10 @@
     <body>
         <div>
             <div style ="position: absolute; z-index: 9999; left: 0; right: 0">
-                <div style="text-align:center; font-size: 45px; margin-top: 20px;">
+                <div style="text-align:center; font-size: 45px; margin-top: 10px;">
                     James Jantz
                 </div>
-                <div style="text-align:center">
+                <div style="text-align:center; height: 30px;">
                     <table style="border-spacing: 20px; margin: auto;">
                             <tr>
                                 <th>home</th>
