--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -10,11 +10,11 @@
     <body>
         <div>
             <div style ="position: absolute; z-index: 9999; left: 0; right: 0">
-                <div style="text-align:center; font-size: 45px; margin-top: 10px;">
+                <div style="text-align:center; font-size: 45px; margin-top: 5px;">
                     James Jantz
                 </div>
-                <div style="text-align:center; height: 30px;">
-                    <table style="border-spacing: 20px; margin: auto;">
+                <div style="text-align:center;">
+                    <table style="border-spacing: 20px; margin: auto; height: 30px;">
                             <tr>
                                 <th>home</th>
                                 <th>nature</th>
