--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -13,8 +13,8 @@
                 <div style="text-align:center; font-size: 45px; margin-top: 5px;">
                     James Jantz
                 </div>
-                <div style="text-align:center;">
-                    <table style="border-spacing: 20px; margin: auto; height: 30px;">
+                <div style="text-align:center; height: 30px; overflow: auto;">
+                    <table style="border-spacing: 20px; margin: auto;">
                             <tr>
                                 <th>home</th>
                                 <th>nature</th>
