--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -14,17 +14,15 @@
                     James Jantz
                 </div>
                 <div style="text-align:center; height: 30px; overflow: auto;">
-                    <table style="border-spacing: 20px; margin: auto;">
-                            <tr>
-                                <th>home</th>
-                                <th>nature</th>
-                                <th>urban</th>
-                                <th>videos</th>
-                                <th>bio</th>
-                                <th>photo albums</th>
-                                <th>book online</th>
-                            </tr>
-                    </table>
+                    
+                                <span>home</span>
+                                <span style="margin-left:15px">nature</span>
+                                <span style="margin-left:15px">urban</span>
+                                <span style="margin-left:15px">videos</span>
+                                <span style="margin-left:15px">bio</span>
+                                <span style="margin-left:15px">photo albums</span>
+                                <span style="margin-left:15px">book online</span>
+
                 </div>            
             </div>
 
@@ -35,11 +33,7 @@
 
         </div>
         <div style="position: absolute; z-index: -1; margin-top: 100px; margin-left: 200px;">
-            <colgroup>
-                <col span="1">
-                <col span="1">
 
-            </colgroup>
             <tr>
                 <td><img src="./images/pier.jpg" alt="" width="525px" height="350px"></td>
                 <td><img src="./images/road.jpg" alt="" width="525px" height="350px"></td>
