--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -14,26 +14,22 @@
                     James Jantz
                 </div>
                 <div style="text-align:center; height: 25px; overflow: auto;">
-                    
-                                <span>home</span>
-                                <span style="margin-left:15px">nature</span>
-                                <span style="margin-left:15px">urban</span>
-                                <span style="margin-left:15px">videos</span>
-                                <span style="margin-left:15px">bio</span>
-                                <span style="margin-left:15px">photo albums</span>
-                                <span style="margin-left:15px">book online</span>
-
+                    <span>home</span>
+                    <span style="margin-left:15px">nature</span>
+                    <span style="margin-left:15px">urban</span>
+                    <span style="margin-left:15px">videos</span>
+                    <span style="margin-left:15px">bio</span>
+                    <span style="margin-left:15px">photo albums</span>
+                    <span style="margin-left:15px">book online</span>
                 </div>            
             </div>
-
             <div style="text-align:center; position:absolute; z-index: -1; left: 0; right: 0">
-                <canvas id="testCanvas" width="840" height="90" style="text-align:center;border:2px solid #d3d3d3;">
+                <canvas id="testCanvas" width="840" height="90" style="text-align:center;border:2px solid black;">
                 </canvas>
             </div>
 
         </div>
         <div style="position: absolute; z-index: -1; margin-top: 150px; margin-left: 200px;">
-
             <tr>
                 <td><img src="./images/pier.jpg" alt="" width="525px" height="320px"></td>
                 <td><img src="./images/road.jpg" alt="" width="525px" height="320px"></td>
@@ -43,6 +39,14 @@
                 <td><img src="./images/lake.jpg" alt="" width="525px" height="320px"></td>
                 <td><img src="./images/mountain.jpg" alt="" width="525px" height="320px"></td>
             </tr>
+        </div>
+        <div style="text-align:center;">
+            © 2023 by James Jantz
+        </div>
+        <div style="text-align: center;">
+            <img src="./images/facebook.png" alt="">
+            <img src="./images/twitter.png" alt="" style="margin-left:20px">
+            <img src="./images/instagram.png" alt="" style="margin-left:20px">
         </div>
     </body>
 </html>
