--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -39,14 +39,14 @@
                 <td><img src="./images/lake.jpg" alt="" width="525px" height="320px"></td>
                 <td><img src="./images/mountain.jpg" alt="" width="525px" height="320px"></td>
             </tr>
-        </div>
-        <div style="text-align:center;">
-            © 2023 by James Jantz
-        </div>
-        <div style="text-align: center;">
-            <img src="./images/facebook.png" alt="">
-            <img src="./images/twitter.png" alt="" style="margin-left:20px">
-            <img src="./images/instagram.png" alt="" style="margin-left:20px">
+            <div style="text-align:center;">
+                © 2023 by James Jantz
+            </div>
+            <div style="text-align: center;">
+                <img src="./images/facebook.png" alt="" width="30px" height="30px">
+                <img src="./images/twitter.png" alt="" width="30px" height="30px" style="margin-left:20px">
+                <img src="./images/instagram.png" alt="" width="30px" height="30px" style="margin-left:20px">
+            </div>
         </div>
     </body>
 </html>
