--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -29,7 +29,7 @@
             </div>
 
         </div>
-        <div style="position: absolute; z-index: -1; margin-top: 150px; margin-left: 200px;">
+        <div style="position: absolute; z-index: -1; margin-top: 150px; text-align: center;">
             <tr>
                 <td><img src="./images/pier.jpg" alt="" width="525px" height="320px"></td>
                 <td><img src="./images/road.jpg" alt="" width="525px" height="320px"></td>
@@ -39,13 +39,13 @@
                 <td><img src="./images/lake.jpg" alt="" width="525px" height="320px"></td>
                 <td><img src="./images/mountain.jpg" alt="" width="525px" height="320px"></td>
             </tr>
-            <div style="text-align:center;">
+            <div style="margin-top: 10px">
                 © 2023 by James Jantz
             </div>
-            <div style="text-align: center;">
-                <img src="./images/facebook.png" alt="" width="30px" height="30px">
-                <img src="./images/twitter.png" alt="" width="30px" height="30px" style="margin-left:20px">
-                <img src="./images/instagram.png" alt="" width="30px" height="30px" style="margin-left:20px">
+            <div style="margin-top: 10px">
+                <img src="./images/facebook.png" alt="" width="25px" height="25px">
+                <img src="./images/twitter.png" alt="" width="25px" height="25px" style="margin-left:20px">
+                <img src="./images/instagram.png" alt="" width="25px" height="25px" style="margin-left:20px">
             </div>
         </div>
     </body>
