--- a/testHW.html/hw3.html
+++ b/testHW.html/hw3.html
@@ -13,7 +13,7 @@
                 <div style="text-align:center; font-size: 40px; margin-top: 5px;">
                     James Jantz
                 </div>
-                <div style="text-align:center; height: 25px; overflow: auto;">
+                <div style="text-align:center; height: 25px; overflow: auto; color:rgb(135, 133, 133); font-family: Verb;">
                     <span>home</span>
                     <span style="margin-left:15px">nature</span>
                     <span style="margin-left:15px">urban</span>
@@ -39,15 +39,16 @@
                 <td><img src="./images/lake.jpg" alt="" width="525px" height="320px"></td>
                 <td><img src="./images/mountain.jpg" alt="" width="525px" height="320px"></td>
             </tr>
-            <div style="margin-top: 10px">
+            <div style="text-align:center; color:rgb(135, 133, 133); font-family: Verb;">
                 © 2023 by James Jantz
             </div>
-            <div style="margin-top: 10px">
-                <img src="./images/facebook.png" alt="" width="25px" height="25px">
-                <img src="./images/twitter.png" alt="" width="25px" height="25px" style="margin-left:20px">
-                <img src="./images/instagram.png" alt="" width="25px" height="25px" style="margin-left:20px">
+            <div style="text-align: center;">
+                <img src="./images/facebook.png" alt="" width="30px" height="30px">
+                <img src="./images/twitter.png" alt="" width="30px" height="30px" style="margin-left:20px">
+                <img src="./images/instagram.png" alt="" width="30px" height="30px" style="margin-left:20px">
             </div>
         </div>
+        
     </body>
 </html>
 
