--- a/ind27ex3879.html
+++ b/ind27ex3879.html
@@ -20,7 +20,7 @@ th, td {
     <td><a href= "">Link to Homework #2</a></td>
   </tr>
   <tr>
-    <td><a href= "">Link to Homework #3</a></td>
+    <td><a href= "https://jiananti.github.io/compl321HW3/home.html">Link to Homework #3</a></td>
     <td><a href= "">Link to Homework #4</a></td>
   </tr>
   <tr>
