--- a/compl321HW3/home.html
+++ b/compl321HW3/home.html
@@ -41,13 +41,15 @@
                     <img src="./images/mountain.jpg" alt="" width="330px" height="330px">
                 </div>
             </div>
-            <div style="text-align:center; color:rgb(135, 133, 133); font-family: Georgia; margin-top: 30px;">
-                <i>© 2023 by James Jantz</i>
-            </div>
-            <div style="text-align: center; margin-top: 20px;">
-                <img src="./images/facebook.png" alt="" width="30px" height="30px">
-                <img src="./images/twitter.png" alt="" width="30px" height="30px" style="margin-left:20px">
-                <img src="./images/instagram.png" alt="" width="30px" height="30px" style="margin-left:20px">
+            <div style="width:660px;  margin:auto;">
+                <div style="text-align:center; color:rgb(135, 133, 133); font-family: Georgia; margin-top: 30px;">
+                    <i>© 2023 by James Jantz</i>
+                </div>
+                <div style="text-align: center; margin-top: 20px;">
+                    <img src="./images/facebook.png" alt="" width="30px" height="30px">
+                    <img src="./images/twitter.png" alt="" width="30px" height="30px" style="margin-left:20px">
+                    <img src="./images/instagram.png" alt="" width="30px" height="30px" style="margin-left:20px">
+                </div>
             </div>
         </div>
     </body>
