--- a/compl321HW3/nature.html
+++ b/compl321HW3/nature.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div style="width:660px;  margin:auto;">
-                <div style="text-align:center; color:#black; font-family: Georgia; margin-top: 30px;">
+                <div style="text-align:center; color:black; font-family: Georgia; margin-top: 30px;">
                     <i>© 2023 by James Jantz</i>
                 </div>
                 <div style="text-align: center; margin-top: 20px;">
