--- a/compl321HW3/home.html
+++ b/compl321HW3/home.html
@@ -33,12 +33,13 @@
         <div style="margin-top: 88px; text-align: center; left: 0; right:0;">
             <div id="home">
                 <div style="margin-top: 30px;  white-space: nowrap;">
-                    <img src="./images/pier.jpg" alt="" width="330px" height="330px">
-                    <img src="./images/road.jpg" alt="" width="330px" height="330px">
+
+                    <img src="./images/pier.jpg" alt="" width="330px" height="330px" style="object-fit: cover;">
+                    <img src="./images/road.jpg" alt="" width="330px" height="330px" style="object-fit: cover;">
                 </div>
                 <div style="white-space: nowrap;">
-                    <img src="./images/lake.jpg" alt="" width="330px" height="330px">
-                    <img src="./images/mountain.jpg" alt="" width="330px" height="330px">
+                    <img src="./images/lake.jpg" alt="" width="330px" height="330px" style="object-fit: cover;">
+                    <img src="./images/mountain.jpg" alt="" width="330px" height="330px" style="object-fit: cover;">
                 </div>
             </div>
             <div style="width:660px;  margin:auto;">
