--- a/compl321HW3/nature.html
+++ b/compl321HW3/nature.html
@@ -39,12 +39,12 @@
                     </div>
                 </div>
                 <div style="white-space: nowrap">
-                    <img src="./images/koalas.jpg" alt="" width="330px" height="330px">
-                    <img src="./images/horses.jpg" alt="" width="330px" height="330px">
+                    <img src="./images/koalas.jpg" alt="" width="330px" height="330px" style="object-fit: cover;">
+                    <img src="./images/horses.jpg" alt="" width="330px" height="330px" style="object-fit: cover;">
                 </div>
                 <div style="white-space: nowrap">
-                    <img src="./images/geko.jpg" alt="" width="330px" height="330px">
-                    <img src="./images/shark.jpg" alt="" width="330px" height="330px">
+                    <img src="./images/geko.jpg" alt="" width="330px" height="330px" style="object-fit: cover;">
+                    <img src="./images/shark.jpg" alt="" width="330px" height="330px" style="object-fit: cover;">
                 </div>
             </div>
             <div style="width:660px;  margin:auto;">
