--- a/ind27ex3879.html
+++ b/ind27ex3879.html
@@ -25,7 +25,10 @@ th, td {
   </tr>
   <tr>
     <td><a href= "">Link to Homework #5</a></td>
-    <td><a href= "">Link to Homework #6</a></td>
+    <td>
+      <a href= "https://solid-daylight-377809.uw.r.appspot.com">Link to Homework #6</a>
+      <a href= "https://app.ticketmaster.com/discovery/v2/events.json?apikey=GuUvjJxGfFUBzMK3BVbvG9Wh3NT3h0sk&keyword=Taylor Swift&segmentId=&radius=15&unit=miles&geoPoint=9q5cs6c">Sample API1: getEvent</a>
+    </td>
   </tr>
   <tr>
     <td><a href= "">Link to Homework #7</a></td>
