--- a/ind27ex3879.html
+++ b/ind27ex3879.html
@@ -26,8 +26,8 @@ th, td {
   <tr>
     <td><a href= "">Link to Homework #5</a></td>
     <td>
-      <a href= "https://solid-daylight-377809.uw.r.appspot.com">Link to Homework #6</a>
-      <a href= "https://app.ticketmaster.com/discovery/v2/events.json?apikey=GuUvjJxGfFUBzMK3BVbvG9Wh3NT3h0sk&keyword=Taylor Swift&segmentId=&radius=15&unit=miles&geoPoint=9q5cs6c">Sample API1: getEvent</a>
+      <div><a href= "https://solid-daylight-377809.uw.r.appspot.com">Link to Homework #6</a></div>
+      <div><a href= "https://app.ticketmaster.com/discovery/v2/events.json?apikey=GuUvjJxGfFUBzMK3BVbvG9Wh3NT3h0sk&keyword=Taylor Swift&segmentId=&radius=15&unit=miles&geoPoint=9q5cs6c">Sample API1: getEvent</a></div>
     </td>
   </tr>
   <tr>
