--- a/ind27ex3879.html
+++ b/ind27ex3879.html
@@ -27,7 +27,7 @@ th, td {
     <td><a href= "">Link to Homework #5</a></td>
     <td>
       <div><a href= "https://solid-daylight-377809.uw.r.appspot.com">Link to Homework #6</a></div>
-      <div><a href= "https://app.ticketmaster.com/discovery/v2/events.json?apikey=GuUvjJxGfFUBzMK3BVbvG9Wh3NT3h0sk&keyword=Taylor Swift&segmentId=&radius=15&unit=miles&geoPoint=9q5cs6c">Sample API1: getEvent</a></div>
+      <div><a href= "https://solid-daylight-377809.uw.r.appspot.com/getTable?keyword=usc&distance=10&category=Default&location=34.0294,-118.2871">Sample API1: getEvent</a></div>
     </td>
   </tr>
   <tr>
