--- a/ind27ex3879.html
+++ b/ind27ex3879.html
@@ -32,7 +32,10 @@ th, td {
   </tr>
   <tr>
     <td><a href= "">Link to Homework #7</a></td>
-    <td><a href= "">Link to Homework #8</a></td>
+    <td>
+      <div><a href= "https://august-tesla-382105.wl.r.appspot.com/">Link to Homework #8</a></div>
+      <div><a href= "https://alert-cedar-382103.wl.r.appspot.com/getTable?keyword=usc&distance=10&category=Default&location=34.0294,-118.2871">Sample API: getTable</a></div>
+    </td>
   </tr>
   <tr>
     <td><a href= "">Link to Homework #9</a></td>
