--- a/ind27ex3879.html
+++ b/ind27ex3879.html
@@ -38,8 +38,9 @@ th, td {
     </td>
   </tr>
   <tr>
-    <div><a href= "https://august-tesla-382105.wl.r.appspot.com/">Link to Homework #9</a></div>
-    <div><a href= "https://alert-cedar-382103.wl.r.appspot.com/getTable?keyword=usc&distance=10&category=Default&location=34.0294,-118.2871">Sample API: getTable</a></div>
+    <td>
+      <div><a href= "https://alert-cedar-382103.wl.r.appspot.com/getTable?keyword=usc&distance=10&category=Default&location=34.0294,-118.2871">Link to Homework #9 back-end</a></div>
+    </td>
   </tr>
   </table>
 </body>
