Update ind27ex3879.html add hw9 video

--- a/ind27ex3879.html
+++ b/ind27ex3879.html
@@ -39,6 +39,7 @@ th, td {
   </tr>
   <tr>
     <td>
+      <div><a href="https://github.com/jiananti/jiananti.github.io/raw/main/Assignment9-jiananti.mp4">Link of Homework #9 front-end video</a></div>
       <div><a href= "https://alert-cedar-382103.wl.r.appspot.com/getTable?keyword=usc&distance=10&category=Default&location=34.0294,-118.2871">Link to Homework #9 back-end</a></div>
     </td>
   </tr>
